Fix Config error

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,6 @@
 FLASK_ENV=development
 JWT_SECRET_KEY=your-super-secret-key
-MONGO_URI=mongodb+srv://rajasri_db_user:rajasri14@cluster0.gxcgqpi.mongodb.net/acadwell?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://rajasri_db_user:rajasri14@cluster0.gxcgqpi.mongodb.net/acadwell?retryWrites=true&w=majority
+
 PORT=5000
 CORS_ORIGINS=http://localhost:3000
