Fix: use env configs and clean app factory 3

--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,5 @@
-FLASK_ENV=development
+FLASK_ENV=production      # use production for Render
 JWT_SECRET_KEY=your-super-secret-key
-MONGO_URI=mongodb+srv://rajasri_db_user:rajasri14@cluster0.gxcgqpi.mongodb.net/acadwell?retryWrites=true&w=majority
-
-PORT=5000
-CORS_ORIGINS=http://localhost:3000
+MONGO_URI=mongodb+srv://rajasri_db_user:rajasri14@cluster0.gxcgqpi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+CORS_ORIGINS=http://localhost:3000   # needed only for local dev
+PORT=10000   # fallback, Render will override automatically
