--- a/backend/.env
+++ b/backend/.env
@@ -1,6 +1,6 @@
 $env:FLASK_APP = "app"
-$env:FLASK_ENV = "development"
+$env:FLASK_ENV = "production"
 $env:JWT_SECRET_KEY = "your-super-secret-key"
 $env:MONGO_URI = "mongodb+srv://rajasri_db_user:rajasri14@cluster0.gxcgqpi.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 $env:CORS_ORIGINS = "http://localhost:3000"
-$env:PORT = "10000"
+$env:PORT = "5000"
